changed .gitignore file

--- a/client/.gitignore
+++ b/client/.gitignore
@@ -6,7 +6,7 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-util/constants.js
+src/util/constants.js
 node_modules
 dist
 dist-ssr
